[package]
name = "RustTest"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = {version = "0.17.2", features = ["blas"] }
ndarray-linalg = { git = "https://github.com/Slippery-Chickenz/ndarray-linalg", features = ["openblas-system"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
num-complex = "0.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
hdf5 = { package = "hdf5-metno", version = "0.12.4", features = ["complex"]}
rootfinder = "0.5.1"


[lib]
name = "qip_qst"
path = "src/lib.rs"

[[bin]]
name = "qip_qs"
path = "src/main.rs"
